--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "koa2-weibo",
+  "name": "koa2-weibo-code01",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node bin/www",
     "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
     "prd": "cross-env NODE_ENV=production pm2 start bin/www",
-    "test": "cross-env NODE_ENV=test jest --runInBand --forceExit -colors"
+    "test": "cross-env NODE_ENV=test jest --runInBand --forceExit -colors",
+    "lint": "eslint --ext .js ./src"
   },
   "dependencies": {
     "debug": "^4.1.1",
@@ -22,12 +23,20 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "redis": "^3.0.2"
+    "mysql2": "^2.1.0",
+    "redis": "^3.0.2",
+    "sequelize": "^5.21.4"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "cross-env": "^5.2.0",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "nodemon": "^1.19.1",
+    "pre-commit": "^1.2.2",
     "supertest": "^4.0.2"
-  }
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
